updated order controller and scraping functions
