# controllers/order.controllers.js
@@ -5,13 +5,14 @@ export async function createOrder(req, res) {
   /*  #swagger.parameters['body'] = {
             in: 'body',
             schema: {
-                $subject: 'Ticket order',
+                $subject: 'Kupovina karte na ticketflow.rs',
                 $to: "ticket.flow.development@gmail.com",
                 $full_name: 'Nikola Mirilo',
                 $title: 'You purchased ticket successfully',
                 $event_title: 'Ed Sheeran Concert',
                 $seller_full_name: 'Pera Peric',
                 $seller_email: 'peraperic@gmail.com',
+                $event_link: 'https://ticketflow.rs/events/1',
                 $total: 2500
             }
     } */
@@ -21,6 +22,7 @@ export async function createOrder(req, res) {
     full_name,
     title,
     event_title,
+    event_link,
     seller_full_name,
     seller_email,
     total,
@@ -32,6 +34,7 @@ export async function createOrder(req, res) {
       full_name,
       title,
       event_title,
+      event_link,
       seller_full_name,
       seller_email,
       total
